# mentor-booking-AI-ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: comprehension_question_metadata.csv  comprehension_questions.csv  comprehension_student_responses.csv  question_bank.csv  question_metadata.csv  questions.csv  student_responses.csv
scripts/: generate_quadratic_dataset.py
src/mentor_booking_ai_ml/: __init__.py  assessment.py  comprehension_assessment.py  datasets.py  example.py  ocr_openai.py  solution_checker.py
tests/: conftest.py  test_assessment.py  test_comprehension_assessment.py  test_datasets.py  test_example.py  test_ocr_openai.py  test_solution_checker.py
